--- a/h2o/h2o.conf
+++ b/h2o/h2o.conf
@@ -1,6 +1,7 @@
 user: isucon
 
 access-log: /var/log/h2o/access.log
+  format: "time:%t\thost:%h\tua:\"%{User-agent}i\"\tstatus:%s\treq:%r\turi:%U\tapptime:%{duration}x\tsize:%b\tmethod:%m"
 error-log: /var/log/h2o/error.log
 pid-file: /var/run/h2o/h2o.pid
 
